Details
Description
SET GLOBAL wsrep_cluster_address='a';
|
SET GLOBAL wsrep_slave_threads=0;
|
Leads to:
10.3.29 562bbf5212412437273a469fc59138a939f123cd (Optimized) |
mysqld: /test/10.3_opt/sql/wsrep_thd.cc:589: bool wsrep_create_appliers(long int, bool): Assertion `0' failed.
|
10.3.29 562bbf5212412437273a469fc59138a939f123cd (Optimized) |
Core was generated by `/test/GAL_MD200421-mariadb-10.3.29-linux-x86_64-opt/bin/mysqld --defaults-file='.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
|
[Current thread is 1 (Thread 0x152ea816e700 (LWP 632906))]
|
(gdb) bt
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
|
#1 0x000055c412ccfb4f in my_write_core (sig=sig@entry=6) at /test/10.3_opt/mysys/stacktrace.c:386
|
#2 0x000055c412768ba8 in handle_fatal_signal (sig=6) at /test/10.3_opt/sql/signal_handler.cc:355
|
#3 <signal handler called>
|
#4 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#5 0x0000152ee8d99859 in __GI_abort () at abort.c:79
|
#6 0x0000152ee8d99729 in __assert_fail_base (fmt=0x152ee8f2f588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55c412d84155 "0", file=0x55c412d8a738 "/test/10.3_opt/sql/wsrep_thd.cc", line=589, function=<optimized out>) at assert.c:92
|
#7 0x0000152ee8daaf36 in __GI___assert_fail (assertion=assertion@entry=0x55c412d84155 "0", file=file@entry=0x55c412d8a738 "/test/10.3_opt/sql/wsrep_thd.cc", line=line@entry=589, function=function@entry=0x55c412d8abf8 "bool wsrep_create_appliers(long int, bool)") at assert.c:101
|
#8 0x000055c4126ed000 in wsrep_create_appliers (threads=<optimized out>, thread_count_lock=thread_count_lock@entry=true) at /test/10.3_opt/sql/wsrep_thd.cc:589
|
#9 0x000055c4126e8b16 in wsrep_slave_threads_update (self=<optimized out>, thd=<optimized out>, type=<optimized out>) at /test/10.3_opt/sql/wsrep_var.cc:613
|
#10 0x000055c4124c7102 in sys_var::update (this=0x55c4134a34c0 <Sys_wsrep_slave_threads>, thd=0x152e64000c48, var=0x152e6400f7d0) at /test/10.3_opt/include/mysql/psi/mysql_thread.h:788
|
#11 0x000055c4124c75eb in set_var::update (this=<optimized out>, thd=<optimized out>) at /test/10.3_opt/sql/set_var.cc:837
|
#12 0x000055c4124c8859 in sql_set_variables (thd=thd@entry=0x152e64000c48, var_list=var_list@entry=0x152e64005778, free=free@entry=true) at /test/10.3_opt/sql/set_var.cc:740
|
#13 0x000055c412571279 in mysql_execute_command (thd=<optimized out>) at /test/10.3_opt/sql/sql_parse.cc:4936
|
#14 0x000055c412575973 in mysql_parse (thd=thd@entry=0x152e64000c48, rawbuf=rawbuf@entry=0x152e6400f670 "SET GLOBAL wsrep_slave_threads=0", length=length@entry=32, parser_state=parser_state@entry=0x152ea816d540, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.3_opt/sql/sql_parse.cc:7871
|
#15 0x000055c41257641a in wsrep_mysql_parse (thd=0x152e64000c48, rawbuf=0x152e6400f670 "SET GLOBAL wsrep_slave_threads=0", length=32, parser_state=0x152ea816d540, is_com_multi=false, is_next_command=false) at /test/10.3_opt/sql/sql_parse.cc:7663
|
#16 0x000055c4125780e1 in dispatch_command (command=COM_QUERY, thd=0x152e64000c48, packet=<optimized out>, packet_length=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.3_opt/sql/sql_parse.cc:1938
|
#17 0x000055c412579d2d in do_command (thd=0x152e64000c48) at /test/10.3_opt/sql/sql_parse.cc:1398
|
#18 0x000055c4126618c6 in do_handle_one_connection (connect=connect@entry=0x55c414e43188) at /test/10.3_opt/sql/sql_connect.cc:1403
|
#19 0x000055c412661a9f in handle_one_connection (arg=0x55c414e43188) at /test/10.3_opt/sql/sql_connect.cc:1308
|
#20 0x0000152ee8f6f609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#21 0x0000152ee8e96293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
10.2.38 (Optimized) |
mysqld: /test/10.2_opt/sql/wsrep_thd.cc:590: bool wsrep_create_appliers(long int, bool): Assertion `0' failed.
|
10.2.38 (Optimized) |
Core was generated by `/test/GAL_MD200421-mariadb-10.2.38-linux-x86_64-opt/bin/mysqld --defaults-file='.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
|
[Current thread is 1 (Thread 0x1469f504f700 (LWP 788675))]
|
(gdb) bt
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
|
#1 0x0000555804ecf80f in my_write_core (sig=sig@entry=6) at /test/10.2_opt/mysys/stacktrace.c:382
|
#2 0x0000555804973de8 in handle_fatal_signal (sig=6) at /test/10.2_opt/sql/signal_handler.cc:355
|
#3 <signal handler called>
|
#4 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#5 0x0000146a0f8c0859 in __GI_abort () at abort.c:79
|
#6 0x0000146a0f8c0729 in __assert_fail_base (fmt=0x146a0fa56588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x555804f856fd "0", file=0x555804f8abf8 "/test/10.2_opt/sql/wsrep_thd.cc", line=590, function=<optimized out>) at assert.c:92
|
#7 0x0000146a0f8d1f36 in __GI___assert_fail (assertion=assertion@entry=0x555804f856fd "0", file=file@entry=0x555804f8abf8 "/test/10.2_opt/sql/wsrep_thd.cc", line=line@entry=590, function=function@entry=0x555804f8b0b8 "bool wsrep_create_appliers(long int, bool)") at assert.c:101
|
#8 0x000055580491bea0 in wsrep_create_appliers (threads=<optimized out>, thread_count_lock=thread_count_lock@entry=true) at /test/10.2_opt/sql/wsrep_thd.cc:590
|
#9 0x000055580491796f in wsrep_slave_threads_update (self=<optimized out>, thd=<optimized out>, type=<optimized out>) at /test/10.2_opt/sql/wsrep_var.cc:613
|
#10 0x00005558047392e2 in sys_var::update (this=0x5558055e7a00 <Sys_wsrep_slave_threads>, thd=0x14698c000c48, var=0x14698c00f3f0) at /test/10.2_opt/include/mysql/psi/mysql_thread.h:759
|
#11 0x000055580473976b in set_var::update (this=<optimized out>, thd=<optimized out>) at /test/10.2_opt/sql/set_var.cc:837
|
#12 0x000055580473aa29 in sql_set_variables (thd=thd@entry=0x14698c000c48, var_list=var_list@entry=0x14698c005410, free=free@entry=true) at /test/10.2_opt/sql/set_var.cc:738
|
#13 0x00005558047c6aff in mysql_execute_command (thd=<optimized out>) at /test/10.2_opt/sql/sql_parse.cc:4644
|
#14 0x00005558047cb2ab in mysql_parse (thd=thd@entry=0x14698c000c48, rawbuf=rawbuf@entry=0x14698c00f290 "SET GLOBAL wsrep_slave_threads=0", length=length@entry=32, parser_state=parser_state@entry=0x1469f504e560, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.2_opt/sql/sql_parse.cc:7796
|
#15 0x00005558047cbb4a in wsrep_mysql_parse (thd=thd@entry=0x14698c000c48, rawbuf=0x14698c00f290 "SET GLOBAL wsrep_slave_threads=0", length=32, parser_state=parser_state@entry=0x1469f504e560, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.2_opt/sql/sql_parse.cc:7588
|
#16 0x00005558047cf25f in dispatch_command (command=COM_QUERY, thd=0x14698c000c48, packet=<optimized out>, packet_length=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.2_opt/sql/sql_class.h:1109
|
#17 0x00005558047cf707 in do_command (thd=0x14698c000c48) at /test/10.2_opt/sql/sql_parse.cc:1381
|
#18 0x00005558048a86d6 in do_handle_one_connection (connect=connect@entry=0x5558070ac858) at /test/10.2_opt/sql/sql_connect.cc:1336
|
#19 0x00005558048a884f in handle_one_connection (arg=0x5558070ac858) at /test/10.2_opt/sql/sql_connect.cc:1241
|
#20 0x0000146a0fdc6609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#21 0x0000146a0f9bd293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Attachments
Issue Links
- relates to
-
MDEV-30418 Setting wsrep_slave_threads causes thread hang
-
- In Review
-