MDEV-25472 : Server crashes when wsrep_cluster_address set to unkown address and wsrep_slave_threads to 0

There were two problems
* If cluster address was set incorrectly we silently accepted it.
Fixed by giving a error. Note that connection to old cluster
address is disconnected.
* If we are not anymore connected to Galera cluster or wsrep is
disabled we should not allow changing wsrep_slave_threads.